Experiment with head/body ssr callback; use sakura-dark stylesheet

--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,10 @@
       }
     </script>
 		<script type="module" src="./index.html.js"></script>
+		<link rel="stylesheet" href="/sakura-dark.css">
 	</head>
 	<body>
-		<div class="todos">
+		<div id="todos">
 			<div>
 				<h3>TODO</h3>
 				<ul></ul>
